--- a/client/src/assets/VideoPlayer.module.scss
+++ b/client/src/assets/VideoPlayer.module.scss
@@ -1,102 +1,105 @@
-.videoBlock{
-  display: flex;
-  flex-direction: row;
 
-  width: 100vw;
-  height: 100vh;
+@mixin control-button{
+  position: absolute;
+  font-size: 40px;
+  color: white;
+  cursor: pointer;
+  z-index: 10;
 }
-.VideoPlayerBlock {
-  width: 65vw;
-  height: auto;
-  aspect-ratio: 9 / 16;
-  max-width: 1080px;
-  max-height: 1920px;
+.videoBlock {
   position: relative;
+  width: fit-content;
+  height: 80vh;
+  overflow: hidden;
+  background-color: black;
+  box-shadow: 0 0 1px rgba(255, 255, 255, 0.3);
+  border-radius: 25px;
+  margin: auto;
+  margin-top: 50px;
+  transition: box-shadow 0.5s ease;
+  &:focus {
+    animation: randomShadow 1.5s infinite;
+  }
+
+  @keyframes randomShadow {
+    0% {
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+    }
+    25% {
+      box-shadow: 0 0 20px rgba(255, 255, 255, 0.6);
+    }
+    50% {
+      box-shadow: 0 0 30px rgba(255, 255, 255, 0.7);
+    }
+    75% {
+      box-shadow: 0 0 20px rgba(255, 255, 255, 0.6);
+    }
+    100% {
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+    }
+  }
+}
+
+.VideoPlayerBlock {
+  position: relative;
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: black;
 }
 
 video {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
+  object-fit: contain;
+  background-color: black;
 }
 
 .PauseOrPlayButton {
-  width: 50px;
-  height: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1;
-  position: absolute;
+  @include control-button;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 25px;
-  color: white;
-  background-color: rgba(0, 0, 0, 0.5);
-  border-radius: 50%;
-  cursor: pointer;
-  &:hover {
-   background-color: rgba(0, 0, 0, 0.8);
-  }
 }
-.PictureInPicture{
-  width: 50px;
-  height: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1;
+
+.PictureInPicture {
+  @include control-button;
+  top: 20px;
+  right: 20px;
+}
+
+.control-panel {
   position: absolute;
-  right: 10px;
-  bottom: 10px;
-  transform: translate(0,0);
-  font-size: 25px;
-  color: white;
-  background-color: rgba(0, 0, 0, 0.5);
-  border-radius: 50%;
-  cursor: pointer;
-  &:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-  }
-
-}
-
-.control-panel{
-  margin-left: 50px;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
   display: flex;
-  flex-direction: column;
-  padding: 10px;
-  width: 15vw;
-  height: 95vh;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  padding: 10px 20px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+  transition: 0.5s ease;
+  &:hover{
+
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
+
+  }
 }
 
 .control-panel-element {
-  width: 50px;
-  height: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  right: 10px;
-  bottom: 10px;
-  transform: translate(0,0);
-  font-size: 25px;
+  margin: 0 10px;
   color: white;
-  background-color: rgba(0, 0, 0, 0.5);
-  border-radius: 50%;
   cursor: pointer;
-  & img{
-    width: 45px;
-    height: 45px;
-    border-radius: 50%;
-  }
-  &:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-  }
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.control-panel-element img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 10px;
 }
